<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- IBAN Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ibanInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_iban"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Validate Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/validate" />

        <!-- Currency Conversion Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Spinners for currency selection -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <Spinner
                android:id="@+id/fromCurrencySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp" />

            <Spinner
                android:id="@+id/toCurrencySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <!-- Convert Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/convert" />

        <!-- TextView to display the converted result -->
        <TextView
            android:id="@+id/convertedResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@drawable/bg_round_gray_stroke"
            android:gravity="start|center"
            android:orientation="vertical">
            <!-- Example TextViews in your layout -->
            <TextView
                android:id="@+id/bankNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/bankCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/bankZipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/bankBicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bic"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
</layout>
